--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "webpack-dev-middleware": "^5.3.1",
     "webpack-dev-server": "^4.7.4"
   }
 }
